--- a/Instalador.html
+++ b/Instalador.html
@@ -9,6 +9,10 @@
       <button>Sobre</button>
     </navbar>
     <button>Teste</button>
-    <footer>Contato</footer>
+  
+    <footer>
+      
+      Contato
+    </footer>
   </body>
 </html>
