--- a/Instalador.html
+++ b/Instalador.html
@@ -2,12 +2,16 @@
   <head>
     <title>Delta Compass</title>
     <meta charset="utf-8">
+    <script href="site.css"></script>
   </head>
   <body>
     <navbar>
       Compass
-      <button>Sobre</button>
+      <button name="btn1">Sobre</button>
     </navbar>
+    <div name="div1">
+
+    </div>
     <button>Teste</button>
   
     <footer>
