--- a/Instalador.html
+++ b/Instalador.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <navbar>
-      Compass
-      <button name="btn1">Sobre</button>
+      Delta Compass
+      <button name="btn1">About</button>
     </navbar>
     <div name="div1">
 
