--- a/Instalador.html
+++ b/Instalador.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <navbar>
+      Compass
+      <button>About</button>
+    </navbar>
     <button>Teste</button>
   </body>
 </html>
