--- a/Instalador.html
+++ b/Instalador.html
@@ -6,8 +6,8 @@
   <body>
     <navbar>
       Compass
-      <button>About</button>
+      <button>Abou</button>
     </navbar>
-    <button>Teste</button>
+    <button>Testesss</button>
   </body>
 </html>
