--- a/Homepage.html
+++ b/Homepage.html
@@ -1,6 +1,7 @@
 <html>
     <head>MercadoFechado</head>
     <meta charset="utf-8">
+    <script href="site.css"></script>
     <body>
         <nav>
             <h1>Mercado Fechado</h1>
