--- a/Homepage.html
+++ b/Homepage.html
@@ -1,16 +1,24 @@
+<!DOCTYPE html>
 <html>
-    <head>MercadoFechado</head>
-    <meta charset="utf-8">
-    <script href="site.css"></script>
-    <body>
-        <nav>
-            <h1>Mercado Fechado</h1>
-            <button>Categorias</button>
-            <button>Vender</button>
-            <Button>Contato</Button>
-            <button>Crie sua Conta</button>
-            <button>Login</button>
-        </nav>
+    <head>
+        <title>Mercado Fechado</title>
+        <meta charset="utf-8">
+        <script href="site.css"></script>
+    </head>
+    <body style="background-color: aquamarine;">
+        <nav style="background-color: black; width: 100%; ">
+            <navbar>
+                <h2 style="color: azure;">Mercado Fechado</h2>
+                <button>Categorias</button>
+                <button>Vender</button>
+                <Button>Contato</Button>
+                <button>Crie sua Conta</button>
+                <button>Login</button>
+            </navbar>
+        </nav><br><br>
+        <div>
+            <p>O Mercado Fechado é o mercado de vendas online menos custo beneficio do Brasil, posto no GuinesBook por este feito.</p>
+        </div>
         <footer></footer>
     </body>
 </html>
