--- a/Homepage.html
+++ b/Homepage.html
@@ -25,6 +25,22 @@
         <div class="slogan">
             <p>O Mercado Fechado é o mercado de vendas online menos custo beneficio do Brasil, posto no GuinesBook por este feito.</p>
         </div>
+        <br><br>
+        <h3>De onde vem nossos produtos?</h3>
+        <div class="container">
+            <div class="grafic1" style="background-color: green;">
+                <p>Roubo de carga:<br>
+                    <span style="font-size: 48px;">29%</span></p>
+            </div>
+            <div class="grafic2" style="background-color: red;">
+                <p>Trabalho escravo com mão de obra Chinesa:<br>
+                    <span style="font-size: 48px;">56%</span></p>
+            </div>
+            <div class="grafic3" style="background-color: blue;">
+                <p>Comprado via revendas:<br>
+                    <span style="font-size: 48px;">15%</span></p>
+            </div>
+        </div>
         <footer></footer>
         
     </body>
