--- a/Homepage.html
+++ b/Homepage.html
@@ -51,7 +51,9 @@
             <button class="btnG" id="gy1" onclick="year1()" onclick="year()">2022</button>
             <button class="btnG" id="gy2" onclick="year2()" onclick="year()">2023</button>
         </div>
-        <footer></footer>
+        <footer>
+            <button id="about" onclick="adm()">About</button>
+        </footer>
         
     </body>
 </html>
